Add apis to User and Application
