# server/src/main/java/hu/personal/opsystem/service/UserService.java
@@ -7,6 +7,9 @@ import hu.personal.opsystem.repository.UserRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
+import java.util.List;
+import java.util.stream.Collectors;
+
 @RequiredArgsConstructor
 @Service
 public class UserService {
@@ -18,5 +21,15 @@ public class UserService {
         userDto.setRole(UserDto.RoleEnum.PARENT);
         User savedUser = userMapper.toEntity(userDto);
         return userMapper.toDto(userRepository.save(savedUser));
+    }
+
+    public void example(String username, String password) {
+        System.out.println(username + " " + password);
+    }
+
+    public List<UserDto> getAll() {
+        return userRepository.findAll().stream()
+                .map(userMapper::toDto)
+                .collect(Collectors.toList());
     }
 }
